--- a/frontend/styles/main.css
+++ b/frontend/styles/main.css
@@ -2,7 +2,6 @@
 
 /** Extensions **/
 @import "./extensions/layout.css";
-@import "./extensions/fonts.css";
 @import "./extensions/form.css";
 @import "./extensions/sidebar.css";
 
@@ -29,7 +28,7 @@
 @import "./posts/view.css";
 
 @theme {
-  --font-sans: DM Sans Variable, sans-serif;
+  --font-sans: system-ui;
   /* CSS HEX */
   --color-lsd-black: #080504;
   --color-lsd-white: #ebe3de;
